# OpenGov

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  REPOSITORY_STATUS.md  SECURITY.md  cli.py  env.example  github-repository-setup.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
backend/: __init__.py
backend/ai_agents/: __init__.py  compliance_agent.py  dspy_integration.py  government_assistant.py
backend/api/: __init__.py  main.py
backend/auth/: __init__.py  cli_auth.py
backend/compliance/: __init__.py  scanner.py
backend/core/: __init__.py  config.py
backend/utils/: __init__.py  system_checker.py
docs/: ARCHITECTURE.md
scripts/: quick-test.py  update-badges.py  validate-cicd.py
tests/: __init__.py  test_api.py  test_cli.py  test_enhanced_coverage.py
